<resources>
    <string name="app_name">ListasMascotas</string>
    <string name="nombre_segundaPabtalla">Detalle Mascotas</string>
    <string name="nombre">Nombre de mascota</string>
    <string name="telefono">Telefono de persona</string>
    <string name="Email">Email de persona</string>

    <string name="action_settings">Acerca De</string>
    <string name="action_settings3">Cuenta Usuario</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact">Contacto</string>

    <string name="labelNombre">Nombre Completo</string>
    <string name="labelTelefono">Telefono</string>
    <string name="labelEmail">Email</string>
    <string name="labelDesc">Descripcion Contacto</string>
    <string name="labelfecha">Fecha  Nacimiento</string>
    <string name="plikes">0 Likes</string>
    <string name="likes">Likes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings4">Recibir Notificaciones</string>
    <string name="lanzar_notificacion">Lanzar Notificacion</string>
    <string name="msg_token_fmt" translatable="false">EL ID es Token: %s</string>
    <string name="usuarioInstagram">Usuario Instagram</string>
    <string name="id_dispositivo">Id dispositivo(no hay necesidad)</string>
</resources>