<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:contex="com.musicoariel4.listasmascotas.MainActivity">
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/icons8_hotel_24"
        android:title="@string/action_favorites_message"
        app:showAsAction="ifRoom"/>

    <!-- Settings, should always be in the overflow -->

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings2"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>